--- a/EvaluatorConsoleApp/EvaluatorConsoleApp.csproj
+++ b/EvaluatorConsoleApp/EvaluatorConsoleApp.csproj
@@ -58,7 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\Desktop\Evaluator.cs" />
+    <Compile Include="Evaluator.cs" />
+    <Compile Include="Tester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
